--- a/main.css
+++ b/main.css
@@ -1,11 +1,19 @@
 *{
     font-family:"Inter", sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+   
+}
+
+body{
+     max-width: 1440px;
 }
 
 #menuSuperior { 
     display:flex;
     flex-direction: column;
-    width: 1440px;
+    width: 100%;
     height: 475px;
     background-color: #303030;
     color: white;
@@ -36,6 +44,140 @@ height: 72px;
 
 }
 
+#eixoVisual {
+  width: 100%;
+height: 229px;
+angle: 0 deg;
+opacity: 1;
+
+}
+#eixoVisual img {
+    width: 100%;
+    height: auto;
+}
+
+#eixoDeSustentacao {
+    display: flex;  
+    height: auto;
+    margin-left: 77px;
+    width: 1440px;
+
+    
+   
+}
+
+#divEixo{
+    width: 1440px;
+    height: 161px;
+margin-top: 259px;
+}
+
+
+
+
+#tituloEixo{
+    font-weight: 500;
+    line-height: 20px;
+    font-size: 40px;
+    letter-spacing: 0px;
+    justify-content: center;
+   
+
+}
+
+#tituloInformacional{
+    font-weight: 300;
+    line-height: 30px;
+    font-size: 24px;
+    letter-spacing: 0%;
+    margin-top: 24px;
+    letter-spacing: 0px;
+    justify-content: center;
+    font-style: light;
+
+ margin-top: 60px;}
+
+
+#caixa-imagem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    margin: 82px 54px 92px 0;}
+
+#imagem{
+width: 510;
+height: 605;
+angle: 0 deg;
+opacity: 1;
+border-radius: 30px;
+
+}
+
+#formulario {
+    width: 100%;
+    height: 638px;
+    background-color: #303030;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#tituloFormulario {
+width: 944px;
+height: 48px;
+angle: 0 deg;
+opacity: 1;
+
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 150%;
+    letter-spacing: 0%;
+    color: white;
+text-align: center;
+
+}
+
+input{
+width: 508px;
+height: 72px;
+angle: 0 deg;
+opacity: 1;
+top: 1661px;
+left: 466px;
+border-radius: 10px;
+margin-top: 48px;
+padding: 19px 0 23px 30px;
+margin-bottom: 14px;
+
+}
+
+
+button{
+position: center;
+width: 286px;
+height: 74px;
+margin-top: 96px;
+margin-left: 111px;
+
+angle: 0 deg;
+opacity: 1;
+border-radius: 10px;
+background: #C07212;
+
+    font-family: Raleway;
+font-weight: 700;
+font-style: Bold;
+font-size: 30px;
+leading-trim: NONE;
+line-height: 30px;
+letter-spacing: 0px;
+vertical-align: middle;
+color: #FFFFFF;
+}
 #eixoVisual{
     width: 1440px;
     height: 229px;
